--- a/gerenciar-produtos.html
+++ b/gerenciar-produtos.html
@@ -4,53 +4,300 @@
   <meta charset="UTF-8">
   <title>Gerenciar Produtos</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .product-list {
+      margin-top: 20px;
+      max-width: 100%;
+      overflow-x: auto;
+    }
+    .product-table {
+      width: 100%;
+      border-collapse: collapse;
+      background: #fff;
+      border: 1px solid #e0e0e0;
+      border-radius: 6px;
+    }
+    .product-table th, .product-table td {
+      padding: 10px;
+      text-align: left;
+      border-bottom: 1px solid #e0e0e0;
+    }
+    .product-table th {
+      background: #f9f9f9;
+      font-weight: bold;
+      color: #444;
+    }
+    .product-table img {
+      max-width: 50px;
+      height: auto;
+    }
+    .product-table button {
+      padding: 6px 12px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 14px;
+      margin-right: 5px;
+    }
+    .edit-btn {
+      background: #FFA500;
+      color: #fff;
+    }
+    .edit-btn:hover {
+      background: #FF8C00;
+    }
+    .delete-btn {
+      background: #E02020;
+      color: #fff;
+    }
+    .delete-btn:hover {
+      background: #CC1B1B;
+    }
+    .form-section {
+      background: #fff;
+      padding: 20px;
+      border: 1px solid #e0e0e0;
+      border-radius: 6px;
+      margin-bottom: 20px;
+    }
+    .form-section h2 {
+      margin-bottom: 15px;
+      color: #444;
+    }
+    .form-section label {
+      display: block;
+      margin: 10px 0 5px;
+      font-weight: bold;
+      color: #333;
+    }
+    .form-section input, .form-section select, .form-section textarea {
+      width: 100%;
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 14px;
+    }
+    .form-section textarea {
+      resize: vertical;
+      min-height: 80px;
+    }
+    .form-section button[type="submit"] {
+      background: #2E8B57;
+      color: #fff;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 16px;
+      margin-top: 10px;
+    }
+    .form-section button[type="submit"]:hover {
+      background: #257A49;
+    }
+    .form-section .cancel-btn {
+      background: #666;
+      margin-left: 10px;
+    }
+    .form-section .cancel-btn:hover {
+      background: #555;
+    }
+    @media (max-width: 768px) {
+      .product-table th, .product-table td {
+        font-size: 12px;
+        padding: 8px;
+      }
+      .product-table img {
+        max-width: 40px;
+      }
+      .product-table button {
+        padding: 4px 8px;
+        font-size: 12px;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h1>Adicionar Novo Produto</h1>
-  <form id="productForm">
-    <label>Nome do Produto:</label><br>
-    <input type="text" id="name" required><br>
-    <label>Preço (R$):</label><br>
-    <input type="number" id="price" step="0.01" required><br>
-    <label>Imagem Principal (URL):</label><br>
-    <input type="url" id="image" required><br>
-    <label>Imagens do Carrossel (URLs, separadas por vírgula):</label><br>
-    <input type="text" id="images" placeholder="https://exemplo.com/img1.jpg,https://exemplo.com/img2.jpg"><br>
-    <label>Descrição:</label><br>
-    <textarea id="description"></textarea><br>
-    <label>Categoria:</label><br>
-    <select id="category" required>
-      <option value="eletronicos">Eletrônicos</option>
-      <option value="moda">Moda</option>
-      <option value="fitness">Fitness</option>
-      <option value="casa">Casa e Decoração</option>
-      <option value="beleza">Beleza</option>
-      <option value="esportes">Esportes</option>
-      <option value="livros">Livros</option>
-      <option value="infantil">Infantil</option>
-      <option value="Celulares">Celulares</option>
-      <option value="Eletrodomésticos">Eletrodomésticos</option>
-    </select><br>
-    <label>Loja:</label><br>
-    <select id="store" required>
-      <option value="amazon">Amazon</option>
-      <option value="magalu">Magalu</option>
-      <option value="shein">Shein</option>
-      <option value="shopee">Shopee</option>
-      <option value="mercadolivre">Mercado Livre</option>
-      <option value="alibaba">Alibaba</option>
-    </select><br>
-    <label>Link de Afiliado:</label><br>
-    <input type="url" id="link" required><br>
-    <button type="submit">Adicionar Produto</button>
-  </form>
-  <a href="index.html">Voltar para a Página Principal</a>
+  <div class="container">
+    <main>
+      <section class="form-section">
+        <h2 id="form-title">Adicionar Novo Produto</h2>
+        <form id="productForm">
+          <input type="hidden" id="editIndex">
+          <label for="name">Nome do Produto:</label>
+          <input type="text" id="name" required>
+          <label for="price">Preço (R$):</label>
+          <input type="number" id="price" step="0.01" required>
+          <label for="image">Imagem Principal (URL):</label>
+          <input type="url" id="image" required>
+          <label for="images">Imagens do Carrossel (URLs, separadas por vírgula):</label>
+          <input type="text" id="images" placeholder="https://exemplo.com/img1.jpg,https://exemplo.com/img2.jpg">
+          <label for="description">Descrição:</label>
+          <textarea id="description"></textarea>
+          <label for="category">Categoria:</label>
+          <select id="category" required>
+            <option value="eletronicos">Eletrônicos</option>
+            <option value="moda">Moda</option>
+            <option value="fitness">Fitness</option>
+            <option value="casa">Casa e Decoração</option>
+            <option value="beleza">Beleza</option>
+            <option value="esportes">Esportes</option>
+            <option value="livros">Livros</option>
+            <option value="infantil">Infantil</option>
+            <option value="Celulares">Celulares</option>
+            <option value="Eletrodomésticos">Eletrodomésticos</option>
+          </select>
+          <label for="store">Loja:</label>
+          <select id="store" required>
+            <option value="amazon">Amazon</option>
+            <option value="magalu">Magalu</option>
+            <option value="shein">Shein</option>
+            <option value="shopee">Shopee</option>
+            <option value="mercadolivre">Mercado Livre</option>
+            <option value="alibaba">Alibaba</option>
+          </select>
+          <label for="link">Link de Afiliado:</label>
+          <input type="url" id="link" required>
+          <button type="submit">Salvar Produto</button>
+          <button type="button" class="cancel-btn" id="cancelEdit" style="display: none;">Cancelar</button>
+        </form>
+      </section>
+
+      <section class="product-list">
+        <h2>Produtos Cadastrados</h2>
+        <table class="product-table">
+          <thead>
+            <tr>
+              <th>Imagem</th>
+              <th>Nome</th>
+              <th>Preço</th>
+              <th>Categoria</th>
+              <th>Loja</th>
+              <th>Ações</th>
+            </tr>
+          </thead>
+          <tbody id="productTableBody"></tbody>
+        </table>
+      </section>
+
+      <a href="index.html">Voltar para a Página Principal</a>
+    </main>
+  </div>
   <script>
-    document.getElementById('productForm').addEventListener('submit', async function(event) {
+    const form = document.getElementById('productForm');
+    const cancelBtn = document.getElementById('cancelEdit');
+    const formTitle = document.getElementById('form-title');
+    const productTableBody = document.getElementById('productTableBody');
+
+    // Configurações da API do GitHub
+    const token = 'ghp_seuTokenAqui'; // Substitua pelo seu token
+    const repo = 'seu-usuario/nome-do-repositorio';
+    const path = 'data/produtos.json';
+
+    // Carregar produtos
+    async function loadProducts() {
+      try {
+        const response = await fetch(`https://api.github.com/repos/${repo}/contents/${path}`, {
+          headers: {
+            'Authorization': `token ${token}`,
+            'Accept': 'application/vnd.github.v3+json'
+          }
+        });
+        if (!response.ok) {
+          throw new Error(`Erro ao carregar produtos: ${response.status}`);
+        }
+        const data = await response.json();
+        const products = JSON.parse(atob(data.content));
+        window.products = products;
+        window.productsSha = data.sha;
+        displayProducts(products);
+      } catch (error) {
+        console.error('Erro ao carregar produtos:', error);
+        alert('Erro ao carregar produtos. Verifique o console.');
+      }
+    }
+
+    // Exibir produtos na tabela
+    function displayProducts(products) {
+      productTableBody.innerHTML = '';
+      if (!products || products.length === 0) {
+        productTableBody.innerHTML = '<tr><td colspan="6">Nenhum produto cadastrado.</td></tr>';
+        return;
+      }
+      products.forEach((product, index) => {
+        const row = document.createElement('tr');
+        row.innerHTML = `
+          <td><img src="${product.image}" alt="${product.name}" loading="lazy" onerror="this.src='imagens/placeholder.jpg'"></td>
+          <td>${product.name}</td>
+          <td>R$${product.price.toFixed(2)}</td>
+          <td>${product.category}</td>
+          <td>${product.store}</td>
+          <td>
+            <button class="edit-btn" data-index="${index}">Editar</button>
+            <button class="delete-btn" data-index="${index}">Excluir</button>
+          </td>
+        `;
+        productTableBody.appendChild(row);
+      });
+    }
+
+    // Preencher formulário para edição
+    function fillFormForEdit(index) {
+      const product = window.products[index];
+      document.getElementById('editIndex').value = index;
+      document.getElementById('name').value = product.name;
+      document.getElementById('price').value = product.price;
+      document.getElementById('image').value = product.image;
+      document.getElementById('images').value = product.images ? product.images.join(', ') : '';
+      document.getElementById('description').value = product.description || '';
+      document.getElementById('category').value = product.category;
+      document.getElementById('store').value = product.store;
+      document.getElementById('link').value = product.link;
+      formTitle.textContent = 'Editar Produto';
+      cancelBtn.style.display = 'inline-block';
+    }
+
+    // Limpar formulário
+    function resetForm() {
+      form.reset();
+      document.getElementById('editIndex').value = '';
+      formTitle.textContent = 'Adicionar Novo Produto';
+      cancelBtn.style.display = 'none';
+    }
+
+    // Atualizar JSON no GitHub
+    async function updateJson(products) {
+      try {
+        const response = await fetch(`https://api.github.com/repos/${repo}/contents/${path}`, {
+          method: 'PUT',
+          headers: {
+            'Authorization': `token ${token}`,
+            'Accept': 'application/vnd.github.v3+json'
+          },
+          body: JSON.stringify({
+            message: 'Atualizar produtos',
+            content: btoa(JSON.stringify(products, null, 2)),
+            sha: window.productsSha
+          })
+        });
+        if (!response.ok) {
+          throw new Error(`Erro ao atualizar produtos.json: ${response.status}`);
+        }
+        const data = await response.json();
+        window.productsSha = data.content.sha; // Atualizar SHA
+        return true;
+      } catch (error) {
+        console.error('Erro ao atualizar JSON:', error);
+        alert('Erro ao atualizar produtos. Verifique o console.');
+        return false;
+      }
+    }
+
+    // Manipular envio do formulário (adicionar/editar)
+    form.addEventListener('submit', async (event) => {
       event.preventDefault();
 
       const imagesInput = document.getElementById('images').value;
-      const images = imagesInput ? imagesInput.split(',').map(url => url.trim()) : [];
+      const images = imagesInput ? imagesInput.split(',').map(url => url.trim()).filter(url => url) : [];
 
       const product = {
         name: document.getElementById('name').value,
@@ -63,53 +310,50 @@
         link: document.getElementById('link').value
       };
 
-      // Configurações da API do GitHub
-      const token = 'ghp_seuTokenAqui'; // Substitua pelo seu token
-      const repo = 'seu-usuario/nome-do-repositorio';
-      const path = 'data/produtos.json';
+      const editIndex = document.getElementById('editIndex').value;
+      let products = [...window.products];
 
-      try {
-        // Obter JSON atual
-        const response = await fetch(`https://api.github.com/repos/${repo}/contents/${path}`, {
-          headers: {
-            'Authorization': `token ${token}`,
-            'Accept': 'application/vnd.github.v3+json'
-          }
-        });
-        if (!response.ok) {
-          throw new Error(`Erro ao obter produtos.json: ${response.status}`);
-        }
-        const data = await response.json();
-        const currentProducts = JSON.parse(atob(data.content));
-
+      if (editIndex !== '') {
+        // Editar produto
+        products[parseInt(editIndex)] = product;
+      } else {
         // Adicionar novo produto
-        currentProducts.push(product);
+        products.push(product);
+      }
 
-        // Atualizar JSON
-        const updateResponse = await fetch(`https://api.github.com/repos/${repo}/contents/${path}`, {
-          method: 'PUT',
-          headers: {
-            'Authorization': `token ${token}`,
-            'Accept': 'application/vnd.github.v3+json'
-          },
-          body: JSON.stringify({
-            message: 'Adicionar novo produto',
-            content: btoa(JSON.stringify(currentProducts, null, 2)),
-            sha: data.sha
-          })
-        });
-
-        if (!updateResponse.ok) {
-          throw new Error(`Erro ao atualizar produtos.json: ${updateResponse.status}`);
-        }
-
-        alert('Produto adicionado com sucesso! Pode demorar alguns minutos para aparecer na página principal.');
-        document.getElementById('productForm').reset();
-      } catch (error) {
-        console.error('Erro ao adicionar produto:', error);
-        alert('Erro ao adicionar produto. Verifique o console para detalhes.');
+      if (await updateJson(products)) {
+        window.products = products;
+        displayProducts(products);
+        resetForm();
+        alert(editIndex !== '' ? 'Produto editado com sucesso!' : 'Produto adicionado com sucesso!');
       }
     });
+
+    // Manipular ações de editar/excluir
+    productTableBody.addEventListener('click', async (event) => {
+      const index = event.target.dataset.index;
+      if (!index) return;
+
+      if (event.target.classList.contains('edit-btn')) {
+        fillFormForEdit(index);
+      } else if (event.target.classList.contains('delete-btn')) {
+        if (confirm('Tem certeza que deseja excluir este produto?')) {
+          let products = [...window.products];
+          products.splice(index, 1);
+          if (await updateJson(products)) {
+            window.products = products;
+            displayProducts(products);
+            alert('Produto excluído com sucesso!');
+          }
+        }
+      }
+    });
+
+    // Cancelar edição
+    cancelBtn.addEventListener('click', resetForm);
+
+    // Carregar produtos ao iniciar
+    loadProducts();
   </script>
 </body>
 </html>
