--- a/gerenciar-produtos.html
+++ b/gerenciar-produtos.html
@@ -77,6 +77,9 @@
       border-radius: 4px;
       font-size: 14px;
     }
+    .form-section input[type="file"] {
+      padding: 3px;
+    }
     .form-section textarea {
       resize: vertical;
       min-height: 80px;
@@ -101,6 +104,18 @@
     .form-section .cancel-btn:hover {
       background: #555;
     }
+    .image-preview {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      margin-top: 5px;
+    }
+    .image-preview img {
+      max-width: 100px;
+      height: auto;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
     @media (max-width: 768px) {
       .product-table th, .product-table td {
         font-size: 12px;
@@ -112,6 +127,9 @@
       .product-table button {
         padding: 4px 8px;
         font-size: 12px;
+      }
+      .image-preview img {
+        max-width: 80px;
       }
     }
   </style>
@@ -127,10 +145,12 @@
           <input type="text" id="name" required>
           <label for="price">Preço (R$):</label>
           <input type="number" id="price" step="0.01" required>
-          <label for="image">Imagem Principal (URL):</label>
-          <input type="url" id="image" required>
-          <label for="images">Imagens do Carrossel (URLs, separadas por vírgula):</label>
-          <input type="text" id="images" placeholder="https://exemplo.com/img1.jpg,https://exemplo.com/img2.jpg">
+          <label for="image">Imagem Principal:</label>
+          <input type="file" id="image" accept="image/jpeg,image/png,image/webp" required>
+          <div class="image-preview" id="imagePreview"></div>
+          <label for="images">Imagens do Carrossel:</label>
+          <input type="file" id="images" accept="image/jpeg,image/png,image/webp" multiple>
+          <div class="image-preview" id="imagesPreview"></div>
           <label for="description">Descrição:</label>
           <textarea id="description"></textarea>
           <label for="category">Categoria:</label>
@@ -187,16 +207,77 @@
     const cancelBtn = document.getElementById('cancelEdit');
     const formTitle = document.getElementById('form-title');
     const productTableBody = document.getElementById('productTableBody');
+    const imageInput = document.getElementById('image');
+    const imagesInput = document.getElementById('images');
+    const imagePreview = document.getElementById('imagePreview');
+    const imagesPreview = document.getElementById('imagesPreview');
 
     // Configurações da API do GitHub
     const token = 'ghp_seuTokenAqui'; // Substitua pelo seu token
     const repo = 'seu-usuario/nome-do-repositorio';
-    const path = 'data/produtos.json';
+    const baseUrl = 'https://seu-usuario.github.io/nome-do-repositorio'; // URL base do GitHub Pages
+
+    // Pré-visualizar imagens selecionadas
+    function previewImages(input, previewDiv) {
+      previewDiv.innerHTML = '';
+      const files = input.files;
+      for (const file of files) {
+        if (!['image/jpeg', 'image/png', 'image/webp'].includes(file.type)) {
+          alert(`Arquivo ${file.name} não é uma imagem válida (JPEG, PNG ou WebP).`);
+          input.value = '';
+          continue;
+        }
+        if (file.size > 5 * 1024 * 1024) { // Limite de 5MB
+          alert(`Arquivo ${file.name} excede o limite de 5MB.`);
+          input.value = '';
+          continue;
+        }
+        const img = document.createElement('img');
+        img.src = URL.createObjectURL(file);
+        img.alt = file.name;
+        img.loading = 'lazy';
+        previewDiv.appendChild(img);
+      }
+    }
+
+    imageInput.addEventListener('change', () => previewImages(imageInput, imagePreview));
+    imagesInput.addEventListener('change', () => previewImages(imagesInput, imagesPreview));
+
+    // Fazer upload de uma imagem para o GitHub
+    async function uploadImage(file) {
+      const fileName = `imagens/uploads/${Date.now()}_${file.name.replace(/\s+/g, '_')}`;
+      const content = await new Promise(resolve => {
+        const reader = new FileReader();
+        reader.onload = () => resolve(reader.result.split(',')[1]); // Base64 sem prefixo
+        reader.readAsDataURL(file);
+      });
+
+      try {
+        const response = await fetch(`https://api.github.com/repos/${repo}/contents/${fileName}`, {
+          method: 'PUT',
+          headers: {
+            'Authorization': `token ${token}`,
+            'Accept': 'application/vnd.github.v3+json'
+          },
+          body: JSON.stringify({
+            message: `Upload imagem ${file.name}`,
+            content: content
+          })
+        });
+        if (!response.ok) {
+          throw new Error(`Erro ao fazer upload da imagem: ${response.status}`);
+        }
+        return `${baseUrl}/${fileName}`;
+      } catch (error) {
+        console.error('Erro ao fazer upload:', error);
+        throw error;
+      }
+    }
 
     // Carregar produtos
     async function loadProducts() {
       try {
-        const response = await fetch(`https://api.github.com/repos/${repo}/contents/${path}`, {
+        const response = await fetch(`https://api.github.com/repos/${repo}/contents/data/produtos.json`, {
           headers: {
             'Authorization': `token ${token}`,
             'Accept': 'application/vnd.github.v3+json'
@@ -246,8 +327,10 @@
       document.getElementById('editIndex').value = index;
       document.getElementById('name').value = product.name;
       document.getElementById('price').value = product.price;
-      document.getElementById('image').value = product.image;
-      document.getElementById('images').value = product.images ? product.images.join(', ') : '';
+      document.getElementById('image').removeAttribute('required'); // Não exigir nova imagem ao editar
+      imagePreview.innerHTML = `<img src="${product.image}" alt="Imagem atual" loading="lazy">`;
+      document.getElementById('images').removeAttribute('required');
+      imagesPreview.innerHTML = product.images ? product.images.map(img => `<img src="${img}" alt="Imagem carrossel" loading="lazy">`).join('') : '';
       document.getElementById('description').value = product.description || '';
       document.getElementById('category').value = product.category;
       document.getElementById('store').value = product.store;
@@ -260,6 +343,10 @@
     function resetForm() {
       form.reset();
       document.getElementById('editIndex').value = '';
+      imageInput.setAttribute('required', '');
+      imagesInput.setAttribute('required', '');
+      imagePreview.innerHTML = '';
+      imagesPreview.innerHTML = '';
       formTitle.textContent = 'Adicionar Novo Produto';
       cancelBtn.style.display = 'none';
     }
@@ -267,7 +354,7 @@
     // Atualizar JSON no GitHub
     async function updateJson(products) {
       try {
-        const response = await fetch(`https://api.github.com/repos/${repo}/contents/${path}`, {
+        const response = await fetch(`https://api.github.com/repos/${repo}/contents/data/produtos.json`, {
           method: 'PUT',
           headers: {
             'Authorization': `token ${token}`,
@@ -283,7 +370,7 @@
           throw new Error(`Erro ao atualizar produtos.json: ${response.status}`);
         }
         const data = await response.json();
-        window.productsSha = data.content.sha; // Atualizar SHA
+        window.productsSha = data.content.sha;
         return true;
       } catch (error) {
         console.error('Erro ao atualizar JSON:', error);
@@ -292,40 +379,54 @@
       }
     }
 
-    // Manipular envio do formulário (adicionar/editar)
+    // Manipular envio do formulário
     form.addEventListener('submit', async (event) => {
       event.preventDefault();
 
-      const imagesInput = document.getElementById('images').value;
-      const images = imagesInput ? imagesInput.split(',').map(url => url.trim()).filter(url => url) : [];
+      try {
+        // Fazer upload da imagem principal
+        let imageUrl = document.getElementById('image').files[0] ? await uploadImage(document.getElementById('image').files[0]) : (document.getElementById('editIndex').value !== '' ? window.products[document.getElementById('editIndex').value].image : '');
 
-      const product = {
-        name: document.getElementById('name').value,
-        price: parseFloat(document.getElementById('price').value),
-        image: document.getElementById('image').value,
-        images: images.length > 0 ? images : undefined,
-        description: document.getElementById('description').value || undefined,
-        category: document.getElementById('category').value,
-        store: document.getElementById('store').value,
-        link: document.getElementById('link').value
-      };
+        // Fazer upload das imagens do carrossel
+        const carouselFiles = document.getElementById('images').files;
+        let carouselUrls = [];
+        if (carouselFiles.length > 0) {
+          for (const file of carouselFiles) {
+            const url = await uploadImage(file);
+            carouselUrls.push(url);
+          }
+        } else if (document.getElementById('editIndex').value !== '') {
+          carouselUrls = window.products[document.getElementById('editIndex').value].images || [];
+        }
 
-      const editIndex = document.getElementById('editIndex').value;
-      let products = [...window.products];
+        const product = {
+          name: document.getElementById('name').value,
+          price: parseFloat(document.getElementById('price').value),
+          image: imageUrl,
+          images: carouselUrls.length > 0 ? carouselUrls : undefined,
+          description: document.getElementById('description').value || undefined,
+          category: document.getElementById('category').value,
+          store: document.getElementById('store').value,
+          link: document.getElementById('link').value
+        };
 
-      if (editIndex !== '') {
-        // Editar produto
-        products[parseInt(editIndex)] = product;
-      } else {
-        // Adicionar novo produto
-        products.push(product);
-      }
+        const editIndex = document.getElementById('editIndex').value;
+        let products = [...window.products];
 
-      if (await updateJson(products)) {
-        window.products = products;
-        displayProducts(products);
-        resetForm();
-        alert(editIndex !== '' ? 'Produto editado com sucesso!' : 'Produto adicionado com sucesso!');
+        if (editIndex !== '') {
+          products[parseInt(editIndex)] = product;
+        } else {
+          products.push(product);
+        }
+
+        if (await updateJson(products)) {
+          window.products = products;
+          displayProducts(products);
+          resetForm();
+          alert(editIndex !== '' ? 'Produto editado com sucesso!' : 'Produto adicionado com sucesso!');
+        }
+      } catch (error) {
+        alert('Erro ao salvar produto. Verifique o console.');
       }
     });
 
