--- a/gerenciar-produtos.html
+++ b/gerenciar-produtos.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <style>
     .product-list {
-      margin-top: 20px;
+      margin-top: 15px;
       max-width: 100%;
       overflow-x: auto;
     }
@@ -15,10 +15,11 @@
       border-collapse: collapse;
       background: #fff;
       border: 1px solid #e0e0e0;
-      border-radius: 6px;
+      border-radius: 4px;
+      font-size: 12px;
     }
     .product-table th, .product-table td {
-      padding: 10px;
+      padding: 6px;
       text-align: left;
       border-bottom: 1px solid #e0e0e0;
     }
@@ -28,16 +29,16 @@
       color: #444;
     }
     .product-table img {
-      max-width: 50px;
+      max-width: 30px;
       height: auto;
     }
     .product-table button {
-      padding: 6px 12px;
+      padding: 4px 8px;
       border: none;
-      border-radius: 4px;
+      border-radius: 3px;
       cursor: pointer;
-      font-size: 14px;
-      margin-right: 5px;
+      font-size: 11px;
+      margin-right: 3px;
     }
     .edit-btn {
       background: #FFA500;
@@ -55,51 +56,53 @@
     }
     .form-section {
       background: #fff;
-      padding: 20px;
+      padding: 15px;
       border: 1px solid #e0e0e0;
-      border-radius: 6px;
-      margin-bottom: 20px;
+      border-radius: 4px;
+      margin-bottom: 15px;
     }
     .form-section h2 {
-      margin-bottom: 15px;
+      margin-bottom: 10px;
       color: #444;
+      font-size: 16px;
     }
     .form-section label {
       display: block;
-      margin: 10px 0 5px;
+      margin: 8px 0 3px;
       font-weight: bold;
       color: #333;
+      font-size: 12px;
     }
     .form-section input, .form-section select, .form-section textarea {
       width: 100%;
-      padding: 8px;
+      padding: 6px;
       border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 14px;
+      border-radius: 3px;
+      font-size: 12px;
     }
     .form-section input[type="file"] {
-      padding: 3px;
+      padding: 2px;
     }
     .form-section textarea {
       resize: vertical;
-      min-height: 80px;
+      min-height: 50px;
     }
     .form-section button[type="submit"] {
       background: #2E8B57;
       color: #fff;
-      padding: 10px 20px;
+      padding: 6px 12px;
       border: none;
-      border-radius: 6px;
+      border-radius: 3px;
       cursor: pointer;
-      font-size: 16px;
-      margin-top: 10px;
+      font-size: 12px;
+      margin-top: 8px;
     }
     .form-section button[type="submit"]:hover {
       background: #257A49;
     }
     .form-section .cancel-btn {
       background: #666;
-      margin-left: 10px;
+      margin-left: 5px;
     }
     .form-section .cancel-btn:hover {
       background: #555;
@@ -107,35 +110,48 @@
     .image-preview {
       display: flex;
       flex-wrap: wrap;
-      gap: 10px;
-      margin-top: 5px;
+      gap: 5px;
+      margin-top: 3px;
     }
     .image-preview img {
-      max-width: 100px;
+      max-width: 60px;
       height: auto;
       border: 1px solid #ccc;
-      border-radius: 4px;
+      border-radius: 3px;
     }
     .error-message {
       color: #E02020;
-      font-size: 14px;
-      margin-top: 10px;
+      font-size: 12px;
+      margin-top: 8px;
       display: none;
     }
     @media (max-width: 768px) {
       .product-table th, .product-table td {
-        font-size: 12px;
-        padding: 8px;
+        font-size: 10px;
+        padding: 4px;
       }
       .product-table img {
-        max-width: 40px;
+        max-width: 25px;
       }
       .product-table button {
-        padding: 4px 8px;
-        font-size: 12px;
+        padding: 3px 6px;
+        font-size: 10px;
+      }
+      .form-section {
+        padding: 10px;
+      }
+      .form-section h2 {
+        font-size: 14px;
+      }
+      .form-section label {
+        font-size: 11px;
+      }
+      .form-section input, .form-section select, .form-section textarea {
+        padding: 5px;
+        font-size: 11px;
       }
       .image-preview img {
-        max-width: 80px;
+        max-width: 50px;
       }
     }
   </style>
@@ -375,6 +391,20 @@
     async function updateJson(products) {
       console.log('Atualizando produtos.json:', products);
       try {
+        // Recarregar SHA para evitar conflitos
+        const shaResponse = await fetch(`https://api.github.com/repos/${repo}/contents/data/produtos.json`, {
+          headers: {
+            'Authorization': `token ${token}`,
+            'Accept': 'application/vnd.github.v3+json'
+          }
+        });
+        if (!shaResponse.ok) {
+          const errorData = await shaResponse.json();
+          throw new Error(`Erro ao obter SHA: ${shaResponse.status} - ${errorData.message}`);
+        }
+        const shaData = await shaResponse.json();
+        window.productsSha = shaData.sha;
+
         const response = await fetch(`https://api.github.com/repos/${repo}/contents/data/produtos.json`, {
           method: 'PUT',
           headers: {
